syntax = "proto3";

package b2b.erp.deliver;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.deliver.api.entity";

//买家ERP系统的送货提醒单（提醒卖家发货）
message PurchaseNotify {
	  int64 pn_id = 1; //原id，erp id
	  int64 ve_uu = 2; //供应商UU号
	  string pn_indate = 3;//录入日期
	  double pn_qty = 4; //需求数量
	  string pn_delivery = 5; //要求发货日期
	  string pn_ordercode = 6; //订单编号
	  int32 pn_orderdetno = 7; //订单明细序号
	  string pn_remark = 8; //备注
	  double pn_endqty = 9; //已发货数量
	  double pr_zxbzs = 10; //物料最小包装数
	  int64 pn_b2bid = 11; //b2bid
	  int64 pn_terminalvenduu = 12; //终端供应商，为0表示正常送货提醒
}

//买家ERP的收料通知单(对应送货单)
message AcceptNotify {
	string b2b_ss_id = 1; //平台发货单id
	string an_venduu = 2; //发货单 所属企业(卖家)UU
	string an_currency = 3; //币别
	float an_rate = 4; //汇率
	string an_payment = 5; //付款方式
	string an_buyeruu = 6; //客户联系人UU
	string an_remark = 7; //备注
	string an_sendcode = 8; //送货单单号
	string an_recorder = 9; //录单人
	string an_date = 10; //发货单日期
	message AcceptNotifyDetail {
		string and_ordercode = 1; //采购订单单号
		int32 and_orderdetno = 2; //采购订单明细
		int64 and_pnid = 3; //来源系统的送货提醒ID
		double and_inqty = 4; //数量
		double and_price = 5; //单价
		string and_remark = 6; //备注
		int32 and_detno = 7; //序号
	}
	repeated AcceptNotifyDetail detailList = 11; //发货单明细
}

//用于修改收料通知
message AcceptNotifyConfirm {
	int64 b2b_ss_id = 1;
	int32  and_detno = 2;
	double and_inqty = 3;
}

//已转检验的收料单
message AcceptNotifyVerify {
	int64 vad_id = 1; //来源ID（买方ERP）
	int64 b2b_ss_id = 2; //送货单主记录ID
	int32 and_detno = 3; //送货单明细序号
	double vad_jyqty = 4; //检验数量
	string ve_code = 5; //检验单号
	double ve_okqty = 6; //检验合格数
	double ve_notokqty = 7; //检验不合格数
	string ve_testman = 8; //检验员
	string ve_date = 9; //检验日期
}